// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks view matches snapshot 1`] = `
.c0 {
  width: 100%;
}

.c0 td {
  border-top: 1px #f1f2f3 solid;
  font-size: 14px;
  font-weight: 400;
  padding: 8px 8px 8px 24px;
  color: #171A1C;
  vertical-align: middle;
}

.c0 tbody > tr:hover {
  background-color: #F1F2F3;
}

.c2 {
  font-family: Inter,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  cursor: default;
  color: #73848C;
}

.c1 {
  padding: 4px 0 4px 24px;
  border-bottom-width: 1px;
  vertical-align: middle;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          ID
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Worker
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          State
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Trace
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      task={
        Object {
          "config": Object {
            "batch.size": "2000",
            "file": "/some/file",
            "task.class": "org.apache.kafka.connect.file.FileStreamSourceTask",
            "topic": "test-topic",
          },
          "id": Object {
            "connector": "first",
            "task": 1,
          },
          "status": Object {
            "id": 1,
            "state": "RUNNING",
            "workerId": "kafka-connect0:8083",
          },
        }
      }
    />
    <tr
      task={
        Object {
          "config": Object {
            "batch.size": "1000",
            "file": "/some/file2",
            "task.class": "org.apache.kafka.connect.file.FileStreamSourceTask",
            "topic": "test-topic",
          },
          "id": Object {
            "connector": "first",
            "task": 2,
          },
          "status": Object {
            "id": 2,
            "state": "FAILED",
            "trace": "Failure 1",
            "workerId": "kafka-connect0:8083",
          },
        }
      }
    />
    <tr
      task={
        Object {
          "config": Object {
            "batch.size": "3000",
            "file": "/some/file3",
            "task.class": "org.apache.kafka.connect.file.FileStreamSourceTask",
            "topic": "test-topic",
          },
          "id": Object {
            "connector": "first",
            "task": 3,
          },
          "status": Object {
            "id": 3,
            "state": "RUNNING",
            "workerId": "kafka-connect0:8083",
          },
        }
      }
    />
  </tbody>
</table>
`;

exports[`Tasks view matches snapshot when fetching tasks 1`] = `<mock-PageLoader />`;

exports[`Tasks view matches snapshot when no tasks 1`] = `
.c0 {
  width: 100%;
}

.c0 td {
  border-top: 1px #f1f2f3 solid;
  font-size: 14px;
  font-weight: 400;
  padding: 8px 8px 8px 24px;
  color: #171A1C;
  vertical-align: middle;
}

.c0 tbody > tr:hover {
  background-color: #F1F2F3;
}

.c2 {
  font-family: Inter,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  cursor: default;
  color: #73848C;
}

.c1 {
  padding: 4px 0 4px 24px;
  border-bottom-width: 1px;
  vertical-align: middle;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          ID
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Worker
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          State
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Trace
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="c2"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan={10}
      >
        No tasks found
      </td>
    </tr>
  </tbody>
</table>
`;
